--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!-- index.html -->
+<html>
+
+  <head>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>TIY-Chessboard</title>
+  </head>
+
+  <body>
+
+
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="assets/js/scripts.js"></script>
+
+  </body>
+
+</html>
