--- a/index.html
+++ b/index.html
@@ -11,6 +11,52 @@
 
   <body>
 
+    <header>
+      <h1>
+        TIY-Chessboard
+      </h1>
+    </header>
+
+    <div class="container">
+
+      <div class="col-1">
+
+        <div class="numbers">
+
+        </div>
+
+      </div>
+
+      <div class="col-2">
+
+        <div class="letters">
+
+        </div>
+
+        <div class="game-board">
+
+        </div>
+
+        <div class="letters">
+
+        </div>
+
+      </div>
+
+      <div class="col-3">
+
+        <div class="numbers">
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <footer>
+
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="assets/js/scripts.js"></script>
