original grid creation

--- a/index.html
+++ b/index.html
@@ -17,36 +17,51 @@
       </h1>
     </header>
 
-    <div class="container">
-
+    <div class="main-container">
       <div class="col-1">
 
-        <div class="numbers">
+        <div class="row-1">
+col1 row1
+        </div>
 
+        <div class="row-2">
+col1 row2
+        </div>
+
+        <div class="row-3">
+col1 row3
         </div>
 
       </div>
 
       <div class="col-2">
 
-        <div class="letters">
-
+        <div class="row-1">
+col2 row1
         </div>
 
-        <div class="game-board">
-
+        <div class="row-2 game-container">
+col2 row 2
         </div>
 
-        <div class="letters">
-
+        <div class="row-3">
+col2 row3
         </div>
 
       </div>
 
       <div class="col-3">
 
-        <div class="numbers">
+        <div class="row-1">
+col3 row1
+        </div>
 
+        <div class="row-2">
+col3 row2
+        </div>
+
+        <div class="row-3">
+col3 row3
         </div>
 
       </div>
