--- a/index.html
+++ b/index.html
@@ -21,15 +21,31 @@
       <div class="col-1">
 
         <div class="row-1">
-col1 row1
+<!-- col1 row1 -->
         </div>
 
         <div class="row-2">
-col1 row2
+
+          <div>8</div><!--
+
+          --><div>7</div><!--
+
+          --><div>6</div><!--
+
+          --><div>5</div><!--
+
+          --><div>4</div><!--
+
+          --><div>3</div><!--
+
+          --><div>2</div><!--
+
+          --><div>1</div>
+
         </div>
 
         <div class="row-3">
-col1 row3
+<!-- col1 row3 -->
         </div>
 
       </div>
@@ -37,15 +53,209 @@ col1 row3
       <div class="col-2">
 
         <div class="row-1">
-col2 row1
+
+          <div>A</div><!--
+
+          --><div>B</div><!--
+
+          --><div>C</div><!--
+
+          --><div>D</div><!--
+
+          --><div>E</div><!--
+
+          --><div>F</div><!--
+
+          --><div>G</div><!--
+
+          --><div>H</div>
+
         </div>
 
         <div class="row-2 game-container">
-col2 row 2
+
+          <div class="game-row-8">
+
+            <div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div>
+
+          </div>
+
+          <div class="game-row-7">
+
+            <div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div>
+
+          </div>
+
+          <div class="game-row-6">
+
+            <div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div>
+
+          </div>
+
+          <div class="game-row-5">
+
+            <div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div>
+
+          </div>
+
+          <div class="game-row-4">
+
+            <div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div>
+
+          </div>
+
+          <div class="game-row-3">
+
+            <div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div>
+
+          </div>
+
+          <div class="game-row-2">
+
+            <div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div>
+
+          </div>
+
+          <div class="game-row-1">
+
+            <div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div><!--
+
+            --><div></div>
+
+          </div>
+
+
+
         </div>
 
         <div class="row-3">
-col2 row3
+
+          <div>A</div><!--
+
+          --><div>B</div><!--
+
+          --><div>C</div><!--
+
+          --><div>D</div><!--
+
+          --><div>E</div><!--
+
+          --><div>F</div><!--
+
+          --><div>G</div><!--
+
+          --><div>H</div>
+
         </div>
 
       </div>
@@ -53,15 +263,31 @@ col2 row3
       <div class="col-3">
 
         <div class="row-1">
-col3 row1
+<!-- col3 row1 -->
         </div>
 
         <div class="row-2">
-col3 row2
+
+          <div>8</div>
+
+          <div>7</div>
+
+          <div>6</div>
+
+          <div>5</div>
+
+          <div>4</div>
+
+          <div>3</div>
+
+          <div>2</div>
+
+          <div>1</div>
+
         </div>
 
         <div class="row-3">
-col3 row3
+<!-- col3 row3 -->
         </div>
 
       </div>
