--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
 
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>TIY-Chessboard</title>
@@ -76,41 +77,41 @@
 
           <div class="game-row-8">
 
-            <div></div><!--
+            <div>&#9820;</div><!--
 
-            --><div></div><!--
+            --><div>&#9822;</div><!--
 
-            --><div></div><!--
+            --><div>&#9821;</div><!--
 
-            --><div></div><!--
+            --><div>&#9819;</div><!--
 
-            --><div></div><!--
+            --><div>&#9818;</div><!--
 
-            --><div></div><!--
+            --><div>&#9821;</div><!--
 
-            --><div></div><!--
+            --><div>&#9822;</div><!--
 
-            --><div></div>
+            --><div>&#9820;</div>
 
           </div>
 
           <div class="game-row-7">
 
-            <div></div><!--
+            <div>&#9823;</div><!--
 
-            --><div></div><!--
+            --><div>&#9823;</div><!--
 
-            --><div></div><!--
+            --><div>&#9823;</div><!--
 
-            --><div></div><!--
+            --><div>&#9823;</div><!--
 
-            --><div></div><!--
+            --><div>&#9823;</div><!--
 
-            --><div></div><!--
+            --><div>&#9823;</div><!--
 
-            --><div></div><!--
+            --><div>&#9823;</div><!--
 
-            --><div></div>
+            --><div>&#9823;</div>
 
           </div>
 
@@ -196,41 +197,41 @@
 
           <div class="game-row-2">
 
-            <div></div><!--
+            <div>&#9817;</div><!--
 
-            --><div></div><!--
+            --><div>&#9817;</div><!--
 
-            --><div></div><!--
+            --><div>&#9817;</div><!--
 
-            --><div></div><!--
+            --><div>&#9817;</div><!--
 
-            --><div></div><!--
+            --><div>&#9817;</div><!--
 
-            --><div></div><!--
+            --><div>&#9817;</div><!--
 
-            --><div></div><!--
+            --><div>&#9817;</div><!--
 
-            --><div></div>
+            --><div>&#9817;</div>
 
           </div>
 
           <div class="game-row-1">
 
-            <div></div><!--
+            <div>&#9814;</div><!--
 
-            --><div></div><!--
+            --><div>&#9815;</div><!--
 
-            --><div></div><!--
+            --><div>&#9816;</div><!--
 
-            --><div></div><!--
+            --><div>&#9813;</div><!--
 
-            --><div></div><!--
+            --><div>&#9812;</div><!--
 
-            --><div></div><!--
+            --><div>&#9816;</div><!--
 
-            --><div></div><!--
+            --><div>&#9815;</div><!--
 
-            --><div></div>
+            --><div>&#9814;</div>
 
           </div>
 
