add button bank

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>TIY-Chessboard</title>
   </head>
@@ -296,6 +297,34 @@
     </div>
 
     <footer>
+
+      <div class="button-bank">
+
+        <div class="btn btn-rewind">
+          <i class="fa fa-fast-backward"></i>
+        </div>
+
+        <div class="btn btn-step-back">
+          <i class="fa fa-backward"></i>
+        </div>
+
+        <div class="btn btn-play">
+          <i class="fa fa-play"></i>
+        </div>
+
+        <div class="btn btn-pause">
+           <i class="fa fa-pause"></i>
+        </div>
+
+        <div class="btn btn-step-forward">
+          <i class="fa fa-forward"></i>
+        </div>
+
+        <div class="btn btn-fast-forward">
+          <i class="fa fa-fast-forward"></i>
+        </div>
+
+      </div>
 
     </footer>
 
