--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!-- index.html -->
-<!DOCTYPE>
-
+ <!DOCTYPE>
 <html>
-
   <head>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -10,328 +7,173 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>TIY-Chessboard</title>
   </head>
-
   <body>
-
     <header>
       <h1>
         TIY-Chessboard
       </h1>
     </header>
-
     <div class="main-container">
       <div class="col-1">
-
-        <div class="row-1">
-<!-- col1 row1 -->
+        <div class="row-1"><!-- col 1 row1 -->
         </div>
-
         <div class="row-2">
-
           <div>8</div><!--
-
-          --><div>7</div><!--
-
-          --><div>6</div><!--
-
-          --><div>5</div><!--
-
-          --><div>4</div><!--
-
-          --><div>3</div><!--
-
-          --><div>2</div><!--
-
-          --><div>1</div>
-
+       --><div>7</div><!--
+       --><div>6</div><!--
+       --><div>5</div><!--
+       --><div>4</div><!--
+       --><div>3</div><!--
+       --><div>2</div><!--
+       --><div>1</div>
         </div>
-
-        <div class="row-3">
-<!-- col1 row3 -->
+        <div class="row-3"><!-- col 1 row3 -->
         </div>
-
       </div>
-
       <div class="col-2">
-
         <div class="row-1">
-
           <div>A</div><!--
-
           --><div>B</div><!--
-
           --><div>C</div><!--
-
           --><div>D</div><!--
-
           --><div>E</div><!--
-
           --><div>F</div><!--
-
           --><div>G</div><!--
-
           --><div>H</div>
-
         </div>
-
         <div class="row-2 game-container">
-
           <div class="game-row-0">
-
             <div>&#9820;</div><!--
-
             --><div>&#9822;</div><!--
-
             --><div>&#9821;</div><!--
-
             --><div>&#9819;</div><!--
-
             --><div>&#9818;</div><!--
-
             --><div>&#9821;</div><!--
-
             --><div>&#9822;</div><!--
-
             --><div>&#9820;</div>
-
           </div>
-
           <div class="game-row-1">
-
             <div>&#9823;</div><!--
-
             --><div>&#9823;</div><!--
-
             --><div>&#9823;</div><!--
-
             --><div>&#9823;</div><!--
-
             --><div>&#9823;</div><!--
-
             --><div>&#9823;</div><!--
-
             --><div>&#9823;</div><!--
-
             --><div>&#9823;</div>
-
           </div>
-
           <div class="game-row-2">
-
             <div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div>
-
           </div>
-
           <div class="game-row-3">
-
             <div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div>
-
           </div>
-
           <div class="game-row-4">
-
             <div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div>
-
           </div>
-
           <div class="game-row-5">
-
             <div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div><!--
-
             --><div></div>
-
           </div>
-
           <div class="game-row-6">
-
             <div>&#9817;</div><!--
-
-            --><div>&#9817;</div><!--
-
-            --><div>&#9817;</div><!--
-
-            --><div>&#9817;</div><!--
-
-            --><div>&#9817;</div><!--
-
-            --><div>&#9817;</div><!--
-
-            --><div>&#9817;</div><!--
-
-            --><div>&#9817;</div>
-
+         --><div>&#9817;</div><!--
+         --><div>&#9817;</div><!--
+         --><div>&#9817;</div><!--
+         --><div>&#9817;</div><!--
+         --><div>&#9817;</div><!--
+         --><div>&#9817;</div><!--
+         --><div>&#9817;</div>
           </div>
-
           <div class="game-row-7">
-
             <div>&#9814;</div><!--
-
-            --><div>&#9816;</div><!--
-
-            --><div>&#9815;</div><!--
-
-            --><div>&#9813;</div><!--
-
-            --><div>&#9812;</div><!--
-
-            --><div>&#9815;</div><!--
-
-            --><div>&#9816;</div><!--
-
-            --><div>&#9814;</div>
-
+         --><div>&#9816;</div><!--
+         --><div>&#9815;</div><!--
+         --><div>&#9813;</div><!--
+         --><div>&#9812;</div><!--
+         --><div>&#9815;</div><!--
+         --><div>&#9816;</div><!--
+         --><div>&#9814;</div>
           </div>
-
-
-
         </div>
-
         <div class="row-3">
-
           <div>A</div><!--
-
-          --><div>B</div><!--
-
-          --><div>C</div><!--
-
-          --><div>D</div><!--
-
-          --><div>E</div><!--
-
-          --><div>F</div><!--
-
-          --><div>G</div><!--
-
-          --><div>H</div>
-
+       --><div>B</div><!--
+       --><div>C</div><!--
+       --><div>D</div><!--
+       --><div>E</div><!--
+       --><div>F</div><!--
+       --><div>G</div><!--
+       --><div>H</div>
         </div>
-
       </div>
-
       <div class="col-3">
-
-        <div class="row-1">
-<!-- col3 row1 -->
+        <div class="row-1"><!-- col 3 row1 -->
         </div>
-
         <div class="row-2">
-
           <div>8</div>
-
           <div>7</div>
-
           <div>6</div>
-
           <div>5</div>
-
           <div>4</div>
-
           <div>3</div>
-
           <div>2</div>
-
           <div>1</div>
-
         </div>
-
-        <div class="row-3">
-<!-- col3 row3 -->
+        <div class="row-3"><!-- col 3 row3 -->
         </div>
-
       </div>
-
     </div>
-
     <footer>
-
       <div class="button-bank">
-
         <div class="btn btn-rewind">
           <i class="fa fa-fast-backward"></i>
         </div>
-
         <div class="btn btn-step-back">
           <i class="fa fa-backward"></i>
         </div>
-
         <div class="btn btn-play">
           <i class="fa fa-play"></i>
         </div>
-
         <div class="btn btn-pause">
            <i class="fa fa-pause"></i>
         </div>
-
         <div class="btn btn-step-forward">
           <i class="fa fa-forward"></i>
         </div>
-
         <div class="btn btn-fast-forward">
           <i class="fa fa-fast-forward"></i>
         </div>
-
       </div>
-
     </footer>
-
-
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="assets/js/scripts.js"></script>
-
   </body>
-
 </html>
